--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "typescript": "^3.9.7"
   },
   "scripts": {
