--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "date-fns": "^2.15.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
